Fixed column-gap syntax

--- a/css/intro.css
+++ b/css/intro.css
@@ -7,7 +7,7 @@
         width: min-content;
         margin-left: auto;
         margin-right: auto;
-        grid-column-gap: 1rem;
+        column-gap: 1rem;
         grid-template-areas:
             "img title"
             "img subtitle";
